<resources>
    <string name="app_name">Easypocket</string>
    <string name="test">testString</string>

    <!--ZONA NUEVOS ELEMENTOS 1c-->
    <string name="saveAndAddMore_1c">Save and add more</string>
    <string name="saveAndExit_1c">Save and exit</string>
    <string name="add_Items_1c">Add Items</string>
    <string name="nameColl_1c">Collection Name</string>

    <!--ZONA LISTA_COLECCION 1a-->
    <string name="myCollection_a1">My Collections</string>
    <string name="addCollection_1a">Add Collection</string>
    <string name="addElement_1a">Add Element</string>
    <string name="editDesign_a1">Edit Design</string>
    <string name="exploreCollection_a1">Explore Collection</string>

    <!--ZONA CREAR Y EDITAR COLECCION 1b-->
    <string name="createAndModifColl_1b">Edit Mode</string>
    <string name="nameColl_1b">Collection name</string>
    <string name="add_field_1b">Add Field</string>
    <string name="save_and_exit_1b">Save And Exit</string>
    <string name="cancel_and_exit_1b">Cancel And Exit</string>

    <!--ZONA VISTA RESUMEN 1e-->
    <string name="nameColl_1e">Collection Name</string>
    <string name="summary_1e">Summary</string>
    <string name="summaryButton_1e">Summary View</string>
    <string name="work_View_1e">Work View</string>
    <string name="deep_Search_1e">Search</string>
    <string name="myPockets_2a">My Pockets</string>
    <string name="addPocket_2a">Add Pocket</string>
    <string name="load_Pocket_2a">Load Pocket</string>
    <string name="share_Manage_2a">Share and Manage Pocket</string>
    <string name="searching_3a">Searching…</string>
    <string name="searchButton_3a">Search</string>
    <string name="buttonAddFilter_3a">Add Filter</string>
    <string name="results_3a">Results</string>
    <string name="title_activity_navigation_test">EasyPocket</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="write">"Column name: "</string>
    <string name="cancel">Cancel</string>
    <string name="pick_in_and_write">write something</string>
    <string name="your_username">your_username</string>
    <string name="your_email_email_com">your_email@email.com</string>
    <string name="summary">SUMMARY</string>
    <string name="collections">Collections</string>
    <string name="write_a_name_for_the_collection">Name for the collection</string>
</resources>
