<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dam.easypocket.AddItem">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/add_Items_1c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/misColecciones"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:textAlignment="center" />

        <TextView
            android:text="@string/nameColl_1c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:id="@+id/nombreColeccion"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:textAlignment="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_weight="0.60">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/llCampos_1d"/>
        </ScrollView>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="59dp">

        <Button
            android:text="@string/saveAndAddMore_1c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:id="@+id/saveMoreButton_1d" />

        <Button
            android:text="@string/saveAndExit_1c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:id="@+id/saveAndExitButton_1d" />

        <Button
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:id="@+id/cancelButton_1d" />
    </LinearLayout>

    </LinearLayout>
</RelativeLayout>
