<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_navigation_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dam.easypocket.CollectionList"
    tools:showIn="@layout/app_bar_navigation_test">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/layoutPrincipal_1a">

        <TextView
            android:text="@string/myCollection_a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMyCollection"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:textAlignment="center"
            android:textAlignment="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:layout_weight="1.21"
            android:id="@+id/scrollColecciones">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linSV" />
        </ScrollView>

        <Button
            android:text="@string/addCollection_1a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAddCollection"
            android:textAllCaps="false"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:id="@+id/layoutAcciones"
            android:weightSum="1"
            android:gravity="center">

            <Button
                android:text="@string/addElement_1a"
                android:layout_width="100dp"
                android:layout_height="103dp"
                android:id="@+id/buttonAddElement"
                android:textAllCaps="false"
                android:enabled="false"/>

            <Button
                android:text="@string/editDesign_a1"
                android:layout_width="100dp"
                android:layout_height="103dp"
                android:id="@+id/buttonEditarDisenio"
                android:textAllCaps="false"
                android:enabled="false"/>

            <Button
                android:text="@string/exploreCollection_a1"
                android:layout_width="100dp"
                android:layout_height="103dp"
                android:id="@+id/buttonExplorar"
                android:textAllCaps="false"
                android:enabled="false"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
