<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_deep_searching"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dam.easypocket.DeepSearching">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/layoutPrincipal_3a">


        <TextView
            android:text="@string/searching_3a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textSearch_3a"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:id="@+id/layoutAcciones"
        android:weightSum="1"
        android:gravity="center">


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Pick-in and Write"
            android:ems="10"
            android:id="@+id/editTextSearch_3a"
            android:layout_weight="0.70" />

        <Button
            android:text="@string/searchButton_3a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:id="@+id/buttonSearch_3a"
            android:textAllCaps="false"/>
    </LinearLayout>
        <Button
            android:text="@string/buttonAddFilter_3a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAddCollection"
            android:textAllCaps="false"/>

        <TextView
            android:text="@string/results_3a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Results_3a"
            tools:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="24sp"
            android:textAlignment="textStart"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:layout_weight="1.21"
            android:id="@+id/scrollResults_3a">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linSV_3a" />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
