<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="dam.easypocket.EditCollection">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="dam.easypocket.EditCollection">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:id="@+id/layoutPrincipal"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="11dp">

                <TextView
                    android:text="@string/createAndModifColl_1b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/misColecciones"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:textAlignment="center"
                    android:layout_weight="0.19" />

                <TextView
                    android:text="@string/nameColl_1b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nombreColeccion"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="30sp"
                    android:textStyle="normal|bold"
                    android:textAlignment="center" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="129dp"
                    android:layout_weight="1.10"
                    android:id="@+id/scrollCampos_1b">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/llCampos_1b"/>
                </ScrollView>

                <Button
                    android:text="@string/add_field_1b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:id="@+id/buttonAddCampo_1b" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:id="@+id/layoutAcciones">

                    <Button
                        android:text="@string/save_and_exit_1b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonGuardarYSalir_1b"
                        android:layout_weight="1"
                        android:textAllCaps="false" />

                    <Button
                        android:text="@string/cancel_and_exit_1b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonCancelarYSalir_1b"
                        android:layout_weight="1"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_navigation_test"
        app:menu="@menu/activity_navigation_test_drawer" />

</android.support.v4.widget.DrawerLayout>